--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">App</string>
     <string name="limit_default_text">最多输入%1$d个字</string>
+    <string name="tx_rating_hint_text">请滑动星星评分</string>
+    <string name="tx_rating">分</string>
 </resources>
